@@ -1,0 +1,3 @@
+Collection of functions and layers to enhance 'ggplot2'. The flagship
+function is 'ggMarginal()', which can be used to add marginal
+histograms/boxplots/density plots to 'ggplot2' scatterplots.
