@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 20:56:19 brook Exp $
+
+SHA1 (R/ggExtra_0.8.tar.gz) = eec58b0689d5c9fb9b0896e2da98470b39478c0d
+RMD160 (R/ggExtra_0.8.tar.gz) = b692d193d16f800796971803c50d876adf7bce0e
+SHA512 (R/ggExtra_0.8.tar.gz) = 6485fd37048585372c37740a6985dccffa8358a30d0133c49c2462c6a639f54d5b084cad1c9b162d739139c4d3bfa64eead48b2273e1c1d10289f0232fba7d15
+Size (R/ggExtra_0.8.tar.gz) = 292232 bytes
