@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3377 2019/08/09 20:55:25 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3378 2019/08/09 20:56:19 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5500,3 +5500,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added www/R-shinyjs version 1.0 [brook 2019-08-09]
 	Added www/R-miniUI version 0.1.1.1 [brook 2019-08-09]
 	Added graphics/R-colourpicker version 1.0 [brook 2019-08-09]
+	Added graphics/R-ggExtra version 0.8 [brook 2019-08-09]
